# github-discovery

./: .dockerignore  .gitignore  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  findings.md  progress.md  pyproject.toml  task_plan.md  test_report_1.md  test_report_2.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
.kilo/: mcp.json  mcp.json.example  mcp.json.template
.workflow/: state.md
docs/analysis/: architecture_analysis.md  phase10_analysis.md
docs/audit/: audit_1_claude.md  audit_1_gemini.md  audit_1_perplexity.md  audit_prompt_1.md
docs/foundation/: SCORING_METHODOLOGY.md  benchmark_report.md  calibration_report.md  github-discovery_foundation_blueprint.md  labeling_guidelines.md
docs/llm-wiki/templates/: archive.md  article.md  raw-source.md
docs/llm-wiki/wiki/: index.md  log.md
docs/plans/: discovery_final_deployment_plan.md  discovery_production_ready_plan_1.md  fase2_plan.md  phase0-implementation-plan.md  phase1-implementation-plan.md  phase2-implementation-plan.md  phase3-implementation-plan.md  phase4-implementation-plan.md  phase5-implementation-plan.md  phase6-implementation-plan.md  phase7-implementation-plan.md  phase8-implementation-plan.md  phase9-implementation-plan.md
docs/roadmaps/: github-discovery_foundation_roadmap.md
marketplace/: README.md
marketplace/mcps/github-discovery/: MCP.yaml
scripts/: generate_session_report.py  generate_wave4_reports.py  smoke_mcp.py  smoke_screening.py
src/github_discovery/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging.py
src/github_discovery/api/: __init__.py  app.py  auth.py  deps.py  errors.py  middleware.py
src/github_discovery/assessment/: __init__.py  budget_controller.py  content_strategy.py  heuristics.py  llm_provider.py  orchestrator.py  repomix_adapter.py  result_parser.py  types.py
src/github_discovery/cli/: __init__.py  app.py  compare.py  db.py  deep_eval.py  discover.py  doctor.py  explain.py  export.py  formatters.py  mcp_config.py  mcp_serve.py  profiles.py  progress_display.py  rank.py  screen.py  session.py  utils.py
src/github_discovery/discovery/: __init__.py  code_search_channel.py  curated_channel.py  dependency_channel.py  domain_classifier.py  github_client.py  graphql_client.py  orchestrator.py  pool.py  registry_channel.py  search_channel.py  seed_expansion.py  types.py
src/github_discovery/feasibility/: __init__.py  baseline.py  calibration.py  golden_dataset.py  metrics.py  report_generation.py  sprint0.py
src/github_discovery/mcp/: __init__.py  __main__.py  config.py  github_client.py  output_format.py  progress.py  prompts.py  server.py  session.py  transport.py
src/github_discovery/models/: __init__.py  agent.py  api.py  assessment.py  candidate.py  enums.py  features.py  mcp_spec.py  scoring.py  screening.py  session.py
src/github_discovery/scoring/: __init__.py  confidence.py  cross_domain.py  engine.py  explainability.py  feature_store.py  profiles.py  ranker.py  types.py  value_score.py
src/github_discovery/screening/: __init__.py  ci_cd.py  clone_manager.py  complexity.py  constants.py  dependency_quality.py  gate1_metadata.py  gate2_static.py  hygiene.py  maintenance.py  orchestrator.py  osv_adapter.py  practices.py  release_discipline.py  scorecard_adapter.py  secrets_check.py  subprocess_runner.py  test_footprint.py  types.py
src/github_discovery/workers/: __init__.py  assessment_worker.py  base_worker.py  discovery_worker.py  job_store.py  queue.py  screening_worker.py  types.py  worker_manager.py
tests/: conftest.py
tests/agentic/: __init__.py  conftest.py  test_kilocode_integration.py  test_mcp_client.py  test_opencode_integration.py  test_progressive_deepening.py  test_session_workflow.py
tests/feasibility/: conftest.py  test_baseline_scoring.py  test_deep_scan.py  test_golden_dataset.py  test_precision_at_k.py  test_report_generation.py  test_sprint0_pipeline.py  test_weight_calibration.py
tests/fixtures/: sample_repos.json
tests/integration/: conftest.py  test_api_e2e.py  test_imports.py  test_mcp_server.py  test_pipeline_e2e.py  test_star_baseline.py
tests/invariants/: test_anti_bias_contract.py
tests/mcp/: test_auth_middleware.py  test_streamable_http.py
tests/unit/: test_config.py  test_exceptions.py  test_logging.py
tests/unit/api/: conftest.py  test_app.py  test_auth.py  test_errors.py  test_middleware.py
tests/unit/assessment/: conftest.py  test_budget_controller.py  test_content_strategy.py  test_heuristic_hardening.py  test_heuristics.py  test_llm_provider.py  test_orchestrator.py  test_provider_lifecycle.py  test_python_analyzer.py  test_repomix_adapter.py  test_result_parser.py  test_types.py
tests/unit/cli/: conftest.py  test_app.py  test_db_cli.py  test_deep_eval.py  test_discover.py  test_doctor.py  test_export.py  test_formatters.py  test_progress_display.py  test_rank.py  test_screen.py  test_session.py  test_utils.py
tests/unit/discovery/: conftest.py  test_code_search_channel.py  test_curated_channel.py  test_dependency_channel.py  test_domain_classifier.py  test_github_client.py  test_graphql_client.py  test_orchestrator.py  test_pool.py  test_registry_channel.py  test_retry.py  test_search_channel.py  test_seed_expansion.py
tests/unit/mcp/: conftest.py  test_config.py  test_github_client.py  test_output_format.py  test_progress.py  test_prompts.py  test_server.py  test_session.py  test_transport.py
(+140 files in other folders)
