[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-discovery"
version = "0.1.0-alpha"
description = "MCP-native agentic discovery engine for high-quality GitHub repositories, independent of popularity"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "GitHub Discovery Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.28",
    "structlog>=24.1",
    "typer>=0.12",
    "mcp>=1.6",
    "aiosqlite>=0.20",
    "repomix>=0.1.0",
    "openai>=1.30",
    "instructor>=1.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "rich>=13.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=3.7",
    "httpx>=0.28",
]
integration = [
    "pytest-httpx>=0.30",
]

[project.scripts]
ghdisc = "github_discovery.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/github_discovery"]

[tool.ruff]
line-length = 99
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
    "C4",     # flake8-comprehensions
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "PTH",    # flake8-use-pathlib
    "A",      # flake8-builtins
    "ANN",    # flake8-annotations
    "D",      # pydocstyle
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print (no print statements)
]
ignore = [
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D203",    # one-blank-line-before-class (conflict with D211)
    "D213",    # multi-line-summary-second-line (conflict with D212)
    "PLR0913", # Too many arguments (common in API models)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "D", "ANN", "PLR2004", "TCH", "PLC0415"]
"__init__.py" = ["F401"]
"src/github_discovery/api/app.py" = ["PLC0415"]  # Deferred imports in lifespan
"src/github_discovery/cli.py" = ["PLC0415", "PLR2004"]  # Deferred imports in CLI commands
"src/github_discovery/cli/*.py" = ["PLC0415", "PLR2004", "ANN401"]  # CLI deferred imports, magic numbers for display widths, Any types in formatters
"src/github_discovery/mcp/server.py" = ["PLC0415"]  # Deferred imports in create_server
"src/github_discovery/mcp/resources/__init__.py" = ["PLC0415"]  # Deferred imports
"src/github_discovery/mcp/tools/__init__.py" = ["PLC0415"]  # Deferred imports
"src/github_discovery/mcp/tools/assessment.py" = ["PLC0415", "PLR0915", "TCH"]  # MCP tool registration; runtime type introspection
"src/github_discovery/mcp/tools/discovery.py" = ["PLC0415", "PLR0915", "TCH"]  # MCP tool registration; runtime type introspection
"src/github_discovery/mcp/tools/ranking.py" = ["PLC0415", "PLR0915", "TCH"]  # MCP tool registration; runtime type introspection
"src/github_discovery/mcp/tools/screening.py" = ["PLC0415", "PLR0915", "S101", "TCH"]  # MCP tool registration; runtime type introspection
"src/github_discovery/mcp/tools/session.py" = ["PLC0415", "S101", "TCH"]  # MCP tool registration; runtime type introspection
"src/github_discovery/cli/rank.py" = ["PLR0912", "PLR0915"]  # CLI orchestration: multi-branch dispatch logic
"src/github_discovery/cli/screen.py" = ["PLR0915"]  # CLI orchestration: screening + scoring pipeline
"src/github_discovery/cli/progress_display.py" = ["PLR0912", "PLR0915"]  # CLI orchestration: multi-branch progress display

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
known-first-party = ["github_discovery"]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 79

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
extra_checks = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --import-mode=importlib"
markers = [
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
    "slow: marks slow tests (deselect with '-m \"not slow\"')",
    "agentic: marks agentic/MCP integration tests",
    "feasibility: marks Sprint 0 feasibility validation tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]